samples/_failures_safe/1761042570_75a0d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b41a0ea6.c:169:1: error: expected identifier or ‘(’ at end of input
  169 | const char
      | ^~~~~
